--- a/CSS/product-card.scss
+++ b/CSS/product-card.scss
@@ -120,7 +120,10 @@ section.card-front{
             width: fit-content;
             i{
                 font-size: 12px;
-                color: #1a1a1a;
+                color: #adadad;
+            }
+            i.yellow{
+                color: #fdcc0d;
             }
         }
         .price{
@@ -149,11 +152,11 @@ section.card-front{
         position: fixed;
         left: 50%;
         top: 50%;
-        transform: translate(-50%,-45%);
+        transform: translate(-50%,-50%);
         width: 90vw;
         max-width: 1500px;
         // min-width: 800px;
-        min-height: fit-content;
+        min-height: 490px;
         height: 70vh;
         max-height: 1000px;
         // overflow: auto; /* Enable scroll if needed */
@@ -185,33 +188,29 @@ section.card-front{
                     cursor: pointer;
                 }
             }
-            .images{
-                width: 48%;
-                height: 100%;
-                display: flex;
-                padding-right: 4%;
-                flex-direction: column;
-                gap: 5px;
+            .swiperM{
                 
-                > img{
-                    object-fit: cover;
-                    width: 100%;
-                    height: 80%;
-                }
-                figure{
-                    display: flex;
-                    justify-content: space-between;
-                    width: 100%;
-                    height: 20%;
-                    gap: 5px;
-                    img{
-                        object-fit: cover;
-                        object-position: center;
-                        width: calc((100% - 15px) / 4);
+                aspect-ratio: 4/3;
+                width: 45%;
+                .swiper-wrapper{
+                    height: 100%;
+                    .swiper-slide{
                         height: 100%;
                     }
                 }
             }
+            img{
+                
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                border-radius: var(--br-img);
+            }
+            
+            
+                
+            
+            
             .text{
                 display: flex;
                 flex-direction: column;
@@ -310,16 +309,19 @@ section.card-front{
             padding: 0;
             border: none;
             box-shadow: none;
+            &:hover{
+                box-shadow: none;
+                transform: none;
+            }
             
               
             
             .description{
-                padding: 10px 12px;
+                padding: 0 10px 12px 10px;
                 display: flex;
                 flex-flow: column nowrap;
                 align-items: flex-start;
-                column-gap: 5%;
-                row-gap: 0;
+                row-gap: .25rem;
                 .prod-name{
                     width: 70%;
                     display: flex;
@@ -353,11 +355,8 @@ section.card-front{
                 }
                 .price{
                     width: 100%;
-                    text-align: right;
-                    height: 7px;
-                    position: absolute;
-                    right: 12px;
-                    top: calc(40vh - 1rem);
+                    text-align: left;
+                    height: fit-content;
                 }
                 .desc{
                     display: block;
@@ -368,13 +367,17 @@ section.card-front{
         dialog.product-modal{
             border: none;
             margin: 0;
+            padding: 0;
             background: #e0e0e0;
             z-index: 10;
             position: fixed;
+            max-width: 100vw;
+            max-height: 100vh;
             top: 0;
             left: 0;
             width: 100vw;
             height: 100vh;
+
             // overflow: auto; /* Enable scroll if needed */
             
             .product-details{
@@ -382,11 +385,10 @@ section.card-front{
                 z-index: 3;
                 background-color: #fefefe;
                 margin: 0;
-                padding: 40px 15px;
+                padding: 0;
                 border: 1px solid #888;
                 width: 100%;
                 height: 100%;
-                margin: 0;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
@@ -398,38 +400,36 @@ section.card-front{
                     height: 0;
                     line-height: 0;
                     position: relative;
-                    top: -10px;
-                    left: 5px;
-                    &:hover, &:focus{
-                        color: black;
-                        text-decoration: none;
-                        cursor: pointer;
-                    }
+                    top: 30px;
+                    left: 15px;
                 }
-                .images{
-                    position: absolute;
-                    top: 100px;
-                    left: 0;
-                    width: 85%;
-                    margin: 0 7.5%;
-                    height: 30vh;
-                    display: flex;
-                    flex-direction: column;
-                    gap: 5px;
-                    
-                    > img{
-                        object-fit: cover;
-                        width: 100%;
+                .swiperM{
+                margin: 3rem 0;
+                
+                aspect-ratio: 4/3;
+                width: 45%;
+                .swiper-wrapper{
+                    height: 100%;
+                    .swiper-slide{
                         height: 100%;
                     }
-                    figure{
-                        display:none;
-                    }
                 }
+                .swiper-button-prev, .swiper-button-next{
+                    display: none;
+                }
+                img{
+                    
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: var(--br-img);
+            }
+            }
                 .text{
                     display: flex;
                     flex-direction: column;
-                    justify-content: space-evenly;
+                    justify-content: flex-start;
+                    gap: 3rem;
                     width: 85%;
                     height: 100%;
                     span.title{
@@ -469,10 +469,6 @@ section.card-front{
                     .ratings{
                         i{
                             color: #adadad;
-                            &:hover{
-                                color: #fdcc0d;
-            
-                            }
                         }
                         i.yellow{
                             color: #fdcc0d;
@@ -488,6 +484,44 @@ section.card-front{
       }
     }
 }
+
+.swiper-button-prev, .swiper-button-next{
+
+    border-radius: .25rem;
+    background-color: rgba(255, 255, 255, 0.257) ;
+    &:focus,&:active{
+        border: none;
+    }
+    i{
+        font-size: x-large;
+        color: black;
+    }
+
+}
+
+@media(max-aspect-ratio: 3/2) and (max-width: 1200px){
+    .product-modal{
+        .product-details{
+            display: flex;
+            flex-direction: column;
+        }
+    }
+    .swiperM{
+        
+        aspect-ratio: 4/3;
+        width: 80% !important;
+        .swiper-wrapper{
+            height: 100%;
+            .swiper-slide{
+                height: 100%;
+            }
+        }
+    }
+    .text{
+        width: 80% !important;
+    }
+}
+// }
 // section.card-front{
 //     border-radius: var(--br);
 //     padding: 10px;
