--- a/CSS/add_products.scss
+++ b/CSS/add_products.scss
@@ -2,410 +2,439 @@
 @import "./nav_admin.scss";
 
 :root {
-    --clr-body-dark: hsl(212, 14%, 27%);
-    --clr-body-light: hsl(225, 100%, 98%);
-    --clr-body-darker: hsl(233, 22%, 92%);
-    
-    --ff: "Roboto", sans-serif;
-    
-    --padding-general-sides: 2rem;
-    --margin-vert-between-sections: 3rem;
-    --max-width-general: 1200px;
-    --height-header-desktop: 140px;
+  --clr-body-dark: hsl(212, 14%, 27%);
+  --clr-body-light: hsl(225, 100%, 98%);
+  --clr-body-darker: hsl(233, 22%, 92%);
 
-    --nav-bar-height: 50px;
+  --ff: "Roboto", sans-serif;
+
+  --padding-general-sides: 2rem;
+  --margin-vert-between-sections: 3rem;
+  --max-width-general: 1200px;
+  --height-header-desktop: 140px;
+
+  --nav-bar-height: 50px;
 }
 
 body {
-    font-family: var(--ff);
-    background-color: var(--clr-body-light);
-    color: var(--clr-body-dark);
-    h1{
-        font-weight: 600;
-    }
-    h2{
-        font-weight: 600;
-    }
+  font-family: var(--ff);
+  background-color: var(--clr-body-light);
+  color: var(--clr-body-dark);
+  h1 {
+    font-weight: 600;
+  }
+  h2 {
+    font-weight: 600;
+  }
 }
 
-.filter-wrap{
-    select {
+.filter-wrap {
+  select {
+    /* styling */
+    background-color: white;
+    border: 0.5px solid grey;
+    border-radius: 4px;
+    display: inline-block;
+    line-height: 1.5em;
+    padding: 5px 35px 5px 10px;
 
-        /* styling */
-        background-color: white;
-        border: .5px solid grey;
-        border-radius: 4px;
-        display: inline-block;
-        line-height: 1.5em;
-        padding: 5px 35px 5px 10px;
-
-        margin-bottom: 5px;     
-        box-sizing: border-box;
-        appearance: none;
-      }
-    .wrap2 .select_input{
-        display: flex;
-        flex-direction: column;
-        column-gap: 5px;
-    }
+    margin-bottom: 5px;
+    box-sizing: border-box;
+    appearance: none;
+  }
+  .wrap2 .select_input {
+    display: flex;
+    flex-direction: column;
+    column-gap: 5px;
+  }
 }
 
-.select_input{
-    select{
-        button.add{
-            z-index: 10;
-            transform: scale(0.01);
-            position: relative;
-            top:0;
-            left: 0;
-        }
-
+.select_input {
+  select {
+    button.add {
+      z-index: 10;
+      transform: scale(0.01);
+      position: relative;
+      top: 0;
+      left: 0;
     }
+  }
 }
 
 // overgenomen van login form
-form{
-    .form_input{
-        position: relative;
-        border-bottom: 2px solid #adadad;
-        margin-bottom: 20px;
-        
-    }
-    
-    .form_input input{
-        width: 100%;
-        padding: 0 5px;
-        height: 40px;
-        font-size: 16px;
-        border: none;
-        background: none;
-        outline: none;
-        flex-grow: 1;
-    }
-    .form_input label{
-        position: absolute;
-        top: 50%;
-        left: 5px;
-        color: #adadad;
-        transform: translateY(-50%);
-        font-size: 16px;
-        pointer-events: none;
-        transition: .5s;
-    }
-      
+form {
+  .form_input {
+    position: relative;
+    border-bottom: 2px solid #adadad;
+    margin-bottom: 20px;
+  }
+
+  .form_input input {
+    width: 100%;
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16px;
+    border: none;
+    background: none;
+    outline: none;
+    flex-grow: 1;
+  }
+  .form_input label {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    color: #adadad;
+    transform: translateY(-50%);
+    font-size: 16px;
+    pointer-events: none;
+    transition: 0.5s;
+  }
 }
 
 // General wrapper css
-.form-container{
-    padding: 2em var(--padding-general-sides) 1em var(--padding-general-sides);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 60vw;
-    min-width: 500px;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
-    
-    // wrapper of section (h2 + wrap2)
-    .wrapper{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        row-gap: var(--padding-general-sides);
-        border-bottom: 1px lightgray solid;
-        padding: 1em 0;
-        
-        // wrapper of section form fields
-        .wrap2{
-            display: flex;
-            flex-flow: row wrap;
-            width: 70%;
-        }
-    }
+.form-container {
+  padding: 2em var(--padding-general-sides) 1em var(--padding-general-sides);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60vw;
+  min-width: 500px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
 
+  // wrapper of section (h2 + wrap2)
+  .wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    row-gap: var(--padding-general-sides);
+    border-bottom: 1px lightgray solid;
+    padding: 1em 0;
+
+    // wrapper of section form fields
+    .wrap2 {
+      display: flex;
+      flex-flow: row wrap;
+      width: 70%;
+    }
+  }
 }
 // Title section
-.title-wrap.wrapper{
-    --toggle-size : 20px;
+.title-wrap.wrapper {
+  --toggle-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  h1 {
+    font-size: x-large;
+    font-weight: 700;
+  }
+  .toggles {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    h1{
-        font-size: x-large;
-        font-weight: 700;
-    }
-    .toggles{
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-        gap: 20px;
+    justify-content: flex-end;
+    gap: 20px;
 
-        .toggle{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            input[type=checkbox]{
-                height: 0;
-                width: 0;
-                visibility: hidden;
-            }
-            label {
-                cursor: pointer;
-                text-indent: -9999px;
-                width: calc(var(--toggle-size)*2);
-                height: var(--toggle-size);
-                background: grey;
-                display: block;
-                border-radius: var(--toggle-size);
-                position: relative;
-            }
-            
-            label:after {
-                content: '';
-                position: absolute;
-                top: calc(var(--toggle-size)/20);
-                left: calc(var(--toggle-size)/20);
-                width: calc(var(--toggle-size)/10*9);
-                height: calc(var(--toggle-size)/10*9);
-                background: #fff;
-                border-radius: calc(var(--toggle-size)/10*9);
-                transition: 0.3s;
-            }
-            
-            input:checked + label {
-                background: #bada55;
-            }
-            
-            input:checked + label:after {
-                left: calc(100% - calc(var(--toggle-size)/20));
-                transform: translateX(-100%);
-            }
-            
-            label:active:after {
-                width: calc(var(--toggle-size)/10*13);
-            }
-        }
+    .toggle {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      input[type="checkbox"] {
+        height: 0;
+        width: 0;
+        visibility: hidden;
+      }
+      label {
+        cursor: pointer;
+        text-indent: -9999px;
+        width: calc(var(--toggle-size) * 2);
+        height: var(--toggle-size);
+        background: grey;
+        display: block;
+        border-radius: var(--toggle-size);
+        position: relative;
+      }
+
+      label:after {
+        content: "";
+        position: absolute;
+        top: calc(var(--toggle-size) / 20);
+        left: calc(var(--toggle-size) / 20);
+        width: calc(var(--toggle-size) / 10 * 9);
+        height: calc(var(--toggle-size) / 10 * 9);
+        background: #fff;
+        border-radius: calc(var(--toggle-size) / 10 * 9);
+        transition: 0.3s;
+      }
+
+      input:checked + label {
+        background: #bada55;
+      }
+
+      input:checked + label:after {
+        left: calc(100% - calc(var(--toggle-size) / 20));
+        transform: translateX(-100%);
+      }
+
+      label:active:after {
+        width: calc(var(--toggle-size) / 10 * 13);
+      }
     }
-    
-    
+  }
 }
 
 // product section
-.product-wrap{
-    textarea {
-        background: transparent;
-        border: none;
-        box-shadow: none;
-        color: inherit;
-        font: inherit;
-        outline: none;
-        padding: 0;
-        resize: none;
-        width: 100%;
-      }
-    align-items: flex-start;
-    .form_input-prodname, .form_input-price{
-        margin-top: 15px;
-        & span::before{
-            content: '';
-            position: absolute;
-            top: 40px;
-            left: 0;
-            width: 0%;
-            height: 2px;
-            background: #2d343c;
-            transition: .5s;
-        }
-        & input:focus ~ label,
-        & input:valid ~ label{
-            top: -5px;
-            color: #2d343c;
-        }
-        & input:focus ~ span::before,
-        & input:valid ~ span::before{
-            width: 100%;
-        }
+.product-wrap {
+  textarea {
+    background: transparent;
+    border: none;
+    box-shadow: none;
+    color: inherit;
+    font: inherit;
+    outline: none;
+    padding: 0;
+    resize: none;
+    width: 100%;
+  }
+  align-items: flex-start;
+  .form_input-prodname,
+  .form_input-price {
+    margin-top: 15px;
+    & span::before {
+      content: "";
+      position: absolute;
+      top: 40px;
+      left: 0;
+      width: 0%;
+      height: 2px;
+      background: #2d343c;
+      transition: 0.5s;
     }
-    .form_input-prodname{
-        flex-grow: 3;
-        flex-basis: 70%;
+    & input:focus ~ label,
+    & input:valid ~ label {
+      top: -5px;
+      color: #2d343c;
     }
-    .form_input-price{
-        flex-grow: 1;
-        flex-basis: 30%;
+    & input:focus ~ span::before,
+    & input:valid ~ span::before {
+      width: 100%;
     }
-    .form_input-description{
-        width: 100%;
-    }
+  }
+  .form_input-prodname {
+    flex-grow: 3;
+    flex-basis: 70%;
+  }
+  .form_input-price {
+    flex-grow: 1;
+    flex-basis: 30%;
+  }
+  .form_input-description {
+    width: 100%;
+  }
 }
 
 // description area
-.form_input-description{
-    textarea{
-        width: 100%;
-        padding: .5em .3em;
-        border: none;
-    }
-    textarea:focus, textarea:valid, textarea:active, textarea::selection{
-        border: none;
-    }
-    textarea::placeholder{
-        color: #adadad;
-        font-size: 17px;
-        left: -5px;
-    }
+.form_input-description {
+  textarea {
+    width: 100%;
+    padding: 0.5em 0.3em;
+    border: none;
+  }
+  textarea:focus,
+  textarea:valid,
+  textarea:active,
+  textarea::selection {
+    border: none;
+  }
+  textarea::placeholder {
+    color: #adadad;
+    font-size: 17px;
+    left: -5px;
+  }
 }
 
 // filter section
-.filter-wrap{
-    .select_input,label{
-        width: 30%;
+.filter-wrap {
+  .select_input,
+  label {
+    width: 30%;
+  }
+  .ratings {
+    min-width: 91px;
+    input {
+      display: none;
     }
-    .ratings{
-        min-width: 91px;
-        input{
-            display: none;
-        }
-        figure{
-            user-select: none;
+    figure {
+      user-select: none;
 
-            i{
-                color: #adadad;
-                &:hover{
-                    color: #fdcc0d;
-
-                }
-            }
-            i.yellow{
-                color: #fdcc0d;
-            }
+      i {
+        color: #adadad;
+        &:hover {
+          color: #fdcc0d;
         }
+      }
+      i.yellow {
+        color: #fdcc0d;
+      }
     }
-    button.add{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        width: 0;
-        height: 0;
-        border-radius: 25px;
+  }
+  button.add {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 0;
+    height: 0;
+    border-radius: 25px;
+    cursor: pointer;
+    outline: none;
+    &:hover span {
+      border-color: #2d343c;
+      transition: 0.5s;
+      opacity: 1;
+    }
+    span {
+      opacity: 1;
+      width: 30px;
+      text-align: center;
+      font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 6;
+    }
+  }
+  .colors {
+    display: flex;
+    // flex-basis: 20px;
+    gap: 10px;
+    row-gap: 5px;
+    flex-wrap: wrap;
+    button:has(label) {
+      font-size: 0.75rem;
+      padding: 0.4em 0.9em;
+      margin: 0.25em;
+      border-radius: 1em;
+      border: none;
+      outline: none;
+      background: #dddddd;
+      cursor: default;
+      label {
         cursor: pointer;
-        outline: none;
-        &:hover span{
-            border-color: #2d343c;
-            transition: .5s;
-            opacity: 1;
-        }
-        span{
-            opacity: 1;
-            width: 30px;
-            text-align: center;
-            font-variation-settings:
-            'FILL' 1,
-            'wght' 400,
-            'GRAD' 0,
-            'opsz' 6
-        }
+      }
     }
-    .colors{
-        display: flex;
-        // flex-basis: 20px;
-        gap: 10px;
-        row-gap: 5px;
-        flex-wrap: wrap;
-        button:has(label) {
-            font-size: 0.75rem;
-            padding: 0.4em 0.9em;
-            margin: 0.25em;
-            border-radius: 1em;
-            border: none;
-            outline: none;
-            background: #dddddd;
-            cursor: default;
-            label{
-                cursor: pointer;
-            }
-          }
-        button:has(label:hover) {
-            transform: scale(1.02);
-            background: #c5c5c5;
-            transition: transform 50ms ease;
-        }
-        button:has(label.clicked) {
-            transform: scale(1.02);
-            background: #b5b5b5;
-            transition: transform 50ms ease;
-        }
+    button:has(label:hover) {
+      transform: scale(1.02);
+      background: #c5c5c5;
+      transition: transform 50ms ease;
     }
-    .wrap2 {
-        display: flex;
-        column-gap: 10px;
+    button:has(label.clicked) {
+      transform: scale(1.02);
+      background: #b5b5b5;
+      transition: transform 50ms ease;
     }
-    
+  }
+  .wrap2 {
+    display: flex;
+    column-gap: 10px;
+  }
 }
 
-.img-wrap.wrapper{
-    border: none;
-    padding-bottom: 0;
-    .wrap2{
-        display: flex;
-        flex-flow: column nowrap;
-        row-gap: 5px;
-        button{
-            width: 80px;
-            height: 30px;
-            border: 1px solid;
-            background: #2d343c;
-            border-radius: 25px;
-            font-size: 12px;
-            color: #e9f4fb;
-            font-weight: 700;
-            cursor: pointer;
-            outline: none;
-            margin: 5px auto auto 0;
-            &:hover{
-                border-color: #2d343c;
-                transition: .5s;
-            }
-        }
+.img-wrap.wrapper {
+  border: none;
+  padding-bottom: 0;
+  .wrap2 {
+    display: flex;
+    flex-flow: column nowrap;
+    row-gap: 5px;
+    button {
+      width: 80px;
+      height: 30px;
+      border: 1px solid;
+      background: #2d343c;
+      border-radius: 25px;
+      font-size: 12px;
+      color: #e9f4fb;
+      font-weight: 700;
+      cursor: pointer;
+      outline: none;
+      margin: 5px auto auto 0;
+      &:hover {
+        border-color: #2d343c;
+        transition: 0.5s;
+      }
     }
+  }
 }
 
 //sumbit button
-.submit-btn{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    height: 8em;
-    input[type="submit"]{
-        width: 200px;
-        height: 50px;
-        border: 1px solid;
-        background: #2d343c;
-        border-radius: 25px;
-        font-size: 18px;
-        color: #e9f4fb;
-        font-weight: 700;
-        cursor: pointer;
-        outline: none;
-        margin: auto auto;
-      }
-      
-      input[type="submit"]:hover{
-        border-color: #2d343c;
-        transition: .5s;
-      }
+.submit-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  height: 8em;
+  input[type="submit"] {
+    width: 200px;
+    height: 50px;
+    border: 1px solid;
+    background: #2d343c;
+    border-radius: 25px;
+    font-size: 18px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+    margin: auto auto;
+  }
+
+  input[type="submit"]:hover {
+    border-color: #2d343c;
+    transition: 0.5s;
+  }
 }
 
-.filter-wrap input[type="checkbox"]{
-    display: none;
+.filter-wrap input[type="checkbox"] {
+  display: none;
 }
 
-.hidden{
-    display: none;
+.submit-pop-up {
+  width: 400px;
+  background: #fff;
+  border-radius: 6px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 0 30px 30px;
+  color: #333;
+  img {
+    width: 100px;
+    margin-top: -50px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+  h2 {
+    font-size: 38px;
+    font-weight: 500;
+    margin: 30px 0 10px;
+  }
+  button {
+    width: 100%;
+    margin-top: 50px;
+    padding: 10px 0;
+    background: #6fd649;
+    color: #fff;
+    border: 0;
+    outline: none;
+    font-size: 18px;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  }
+}
+
+.hidden {
+  display: none;
 }
