--- a/CSS/add_products.scss
+++ b/CSS/add_products.scss
@@ -27,9 +27,9 @@ body {
     h2{
         font-weight: 600;
     }
-
-    
+    height: 115vh;
 }
+
 
 .filter-wrap{
     select {
@@ -66,7 +66,7 @@ body {
     }
 }
 
-// overgenomen van login form
+
 form{
     .form_input{
         position: relative;
@@ -317,7 +317,7 @@ form{
     }
     .colors{
         display: flex;
-        // flex-basis: 20px;
+        
         gap: 10px;
         row-gap: 5px;
         flex-wrap: wrap;
@@ -343,6 +343,10 @@ form{
             transform: scale(1.02);
             background: #b5b5b5;
             transition: transform 50ms ease;
+        }
+        #newCol{
+            font-weight: bold;
+            
         }
     }
     .wrap2 {
