--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -48,6 +48,7 @@ body {
 /* <- welcome -> */
 .welcome-container {
   height: calc(100vh - 60px);
+  // max-height: 1000px;
   margin-top: 0;
   margin-bottom: 0;
 }
