--- a/CSS/welcome.scss
+++ b/CSS/welcome.scss
@@ -16,10 +16,14 @@
   margin-top: var(--margin-vert-between-sections);
   position: relative;
   display: flex;
+  flex-direction: column;
+  gap:3rem;
+  justify-content: center;
   align-items: center;
 
   .welcome__text{
     font-family: var(--ff-main-title);
+    
     .title{
       text-align: center;
       font-size: 3.5rem;
@@ -29,14 +33,33 @@
 
   .welcome__image-container {
     // border: 2px solid red;
-    height: 500px;
-    width: 60%;
+    height: 600px;
+    width: 80%;
     background-image: url(../images/welcome/keyboard_light.png);
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center;
+    background-position: top;
+    
   }
 
+}
+
+@media(max-width: 770px){
+  .welcome-container{
+    
+    .welcome__text{
+      .title{
+        font-size: 2.5rem;
+      }
+    }
+    .welcome__image-container{
+      background-image: url(../images/welcome/tooKeykaps.jpg);
+      
+      width: 100%;
+      height: 400px;
+      background-position: top;
+    }
+  }
 }
 
 
